2004-02-18  Nathan Sidwell  <nathan@codesourcery.com>

	* ldgram.y (statement_anywhere): Add assert rule.
	* ldlang.c (exp_init_os): Add assert case.

2004-02-14  Andrew Cagney  <cagney@redhat.com>

	* ldmain.c (remove_output): Call bfd_cache_close.

2004-02-14  Richard Sandiford  <rsandifo@redhat.com>

	* emulparams/elf32bmipn32-defs.sh (OTHER_SECTIONS): Discard
	.MIPS.content* and .MIPS.events* sections.

2004-02-09  Daniel Jacobowitz  <drow@mvista.com>

	* emulparams/armelf.sh, emulparams/armelf_linux.sh: Move
	.note.gnu.arm.ident to after allocated sections.  Mark its
	address as 0.

2004-02-09  Daniel Jacobowitz  <drow@mvista.com>

	* emulparams/armelf_linux.sh (COMMONPAGESIZE): Set to 4KB.
	* emulparams/elf32bmip.sh (COMMONPAGESIZE): Likewise.
	* emulparams/elf32bmipn32.sh (COMMONPAGESIZE): Likewise.
	* emulparams/elf32btsmipn32.sh (COMMONPAGESIZE): Likewise.
	* emulparams/shlelf_linux.sh (COMMONPAGESIZE): Likewise.

2004-02-05  Nick Clifton  <nickc@redhat.com>

	* emultempl/pe.em (_after_open): Fix typo in previous delta.

2004-02-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* emultempl/pe.em (_after_open): Fix thinko in 2003-12-18 patch.

2004-01-28  Alan Modra  <amodra@bigpond.net.au>

	* genscripts.sh: Fix typo.

	* genscripts.sh: Apply $LIBPATH_SUFFIX to $tool_lib and $libdir too.

2004-01-24  Jakub Jelinek  <jakub@redhat.com>

	* emulparams/elf64_ia64.sh: Put .rela.opd into
	OTHER_GOT_RELOC_SECTIONS instead of OTHER_PLT_RELOC_SECTIONS.

2004-01-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* pe-dll.c (pe_create_import_fixup): Clear WP_TEXT flag.
	* ld.texinfo (--omagic): Note that writable text section
	does not conform to published PE-COFF specs.
	(--enable-auto-import): Likewise.

2004-01-15  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf32ppc.sh (COMMONPAGESIZE): Define.

2004-01-13  Nick Clifton  <nickc@redhat.com>

	* ldlang.c (lang_get_regions): Add extra parameter 'have_vma'