@@ -1,0 +1,10 @@
+SECTIONS
+{
+  .text 0x1000 :
+   {
+     LONG (label)
+     label = .;
+     LONG (ADDR (.other))
+   }
+   .other : {}
+}
