@@ -1,3 +1,10 @@
+2004-02-19  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* ldlang.c (map_input_to_output_sections): Initialize sections
+	mentioned in a data statement expression.
+	(lang_do_assignments_1): Add data statement's expression's
+	section's vma.
+
 2004-02-18  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* ldgram.y (statement_anywhere): Add assert rule.
